beaverhabit/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beaverhabit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beaverhabit
  template:
    metadata:
      labels:
        app: beaverhabit
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: beaverhabit
          image: daya0576/beaverhabits
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/.user/
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: beaverhabit-data
