beaverhabit/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beaverhabit
spec:
  selector:
    app: beaverhabit
  ports:
    - port: 8080
      targetPort: 8080
