beaverhabit/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beaverhabit
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - habit
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beaverhabit
                port:
                  number: 8080
